# NukeDoctor

./: .gitignore  Cargo.toml  README.md
benches/: nukedoctorlib.rs  nukedoctorlib_bench.rs
example_scripts/: Creating_Motion_Blur.nk  DeepMerge_Advanced.gizmo  Despilling_Greenscreen_and_Bluescree_Footage.nk  bm_MatteCheck.gizmo  cf_embers.nk
src/: config.rs  errors.rs  lib.rs  main.rs  parser.rs  structs.rs  tokeniser.rs  utils.rs
test_data/: Cloudtastic.nk  Cloudtastic.nk.expected  Cloudtastic.nk.expected_nodot  Cloudtastic.nk.expected_nodot_empty  Cloudtastic01.nk  Cloudtastic02.nk  Cloudtastic_expected.nk  Creating_Motion_Blur.nk  Creating_Motion_Blur.nk.expected  Creating_Motion_Blur_expected.nk  DeepMerge_Advanced.gizmo.expected  DeepMerge_Advanced.gizmo.expected_nodot  DeepMerge_Advanced.gizmo.expected_nodot_empty  DeepMerge_Advanced_expected.gizmo  Despilling_Greenscreen_and_Bluescree_Footage.nk.expected  Despilling_Greenscreen_and_Bluescree_Footage.nk.expected_nodot_empty  Despilling_Greenscreen_and_Bluescree_Footage_expected.nk  bench_data.nk  bm_EdgeMatte.gizmo  bm_EdgeMatte.gizmo.expected  bm_EdgeMatte.gizmo.expected_nodot  bm_EdgeMatte.gizmo.expected_nodot_empty  bm_EdgeMatte_expected.gizmo  bm_MatteCheck.gizmo.expected  bm_MatteCheck.gizmo.expected_nodot  bm_MatteCheck.gizmo.expected_nodot_empty  bm_MatteCheck_expected.gizmo  cases.json  data  data.doctored  data.json  data_expected  empty_groups  empty_groups.expected  expected_01  expected_02  expected_03  expected_04  max_lines  max_lines.expected  (+12 more)
test_data_2/: cases_2.json
